include assigned box details
